[gd_scene load_steps=20 format=3 uid="uid://b4l7ncn65dutk"]

[ext_resource type="Texture2D" uid="uid://rx7v05dohgfy" path="res://assets/images/objects/monitorScreen/spr_screen_0.png" id="1_13f7t"]
[ext_resource type="Script" path="res://scenes/objects/monitor_screen.gd" id="1_uyd8r"]
[ext_resource type="Texture2D" uid="uid://cxqaxitst4ftk" path="res://assets/images/objects/monitorScreen/spr_screen_1.png" id="2_30mom"]
[ext_resource type="Texture2D" uid="uid://rlwhvhth0uxn" path="res://assets/images/objects/monitorScreen/spr_screen_2.png" id="3_qhfwc"]
[ext_resource type="Texture2D" uid="uid://cpeyxk330fw83" path="res://assets/images/objects/monitorScreen/spr_screen_3.png" id="4_qen7g"]
[ext_resource type="Texture2D" uid="uid://b2ld3v02omi0o" path="res://assets/images/objects/monitorScreen/spr_screen_4.png" id="5_wvy2h"]
[ext_resource type="Texture2D" uid="uid://de8gidv7s50xe" path="res://assets/images/objects/monitorScreen/spr_screen_5.png" id="6_rk6us"]
[ext_resource type="Texture2D" uid="uid://dqid2v5m2swbk" path="res://assets/images/objects/monitorScreen/spr_screen_6.png" id="7_mrhsh"]
[ext_resource type="Texture2D" uid="uid://brveq105kyrbq" path="res://assets/images/objects/monitorScreen/spr_screen_7.png" id="8_nt2on"]
[ext_resource type="Texture2D" uid="uid://cvkene5we00mf" path="res://assets/images/objects/monitorScreen/spr_screen_8.png" id="9_nju1c"]
[ext_resource type="Texture2D" uid="uid://bnaomojh57cvo" path="res://assets/images/objects/monitorScreen/spr_screen_9.png" id="10_jjqnj"]
[ext_resource type="Texture2D" uid="uid://ccxlb3vwqedim" path="res://assets/images/objects/monitorScreen/spr_screen_10.png" id="11_edrmh"]
[ext_resource type="Texture2D" uid="uid://crcidcnd8hw5x" path="res://assets/images/objects/monitorScreen/spr_screen_11.png" id="12_x1ejo"]
[ext_resource type="Texture2D" uid="uid://d5beiv8b62fh" path="res://assets/images/objects/monitorScreen/spr_screen_12.png" id="13_8sbk2"]
[ext_resource type="Texture2D" uid="uid://drp04gyvj3so0" path="res://assets/images/objects/monitorScreen/spr_screen_13.png" id="14_vn2wl"]
[ext_resource type="Texture2D" uid="uid://deglt5k4lyhsu" path="res://assets/images/objects/monitorScreen/spr_screen_14.png" id="15_xib56"]
[ext_resource type="AudioStream" uid="uid://ixpa53l3kjk7" path="res://assets/sounds/music/ComputerMusic.mp3" id="17_7tsib"]
[ext_resource type="Texture2D" uid="uid://ioixrcsgd0ee" path="res://assets/images/lights/circle.png" id="18_fh0uk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kw8ft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_13f7t")
}, {
"duration": 1.0,
"texture": ExtResource("2_30mom")
}, {
"duration": 1.0,
"texture": ExtResource("3_qhfwc")
}, {
"duration": 1.0,
"texture": ExtResource("4_qen7g")
}, {
"duration": 1.0,
"texture": ExtResource("5_wvy2h")
}, {
"duration": 1.0,
"texture": ExtResource("6_rk6us")
}, {
"duration": 1.0,
"texture": ExtResource("7_mrhsh")
}, {
"duration": 1.0,
"texture": ExtResource("8_nt2on")
}, {
"duration": 1.0,
"texture": ExtResource("9_nju1c")
}, {
"duration": 1.0,
"texture": ExtResource("10_jjqnj")
}, {
"duration": 1.0,
"texture": ExtResource("11_edrmh")
}, {
"duration": 1.0,
"texture": ExtResource("12_x1ejo")
}, {
"duration": 1.0,
"texture": ExtResource("13_8sbk2")
}, {
"duration": 1.0,
"texture": ExtResource("14_vn2wl")
}, {
"duration": 1.0,
"texture": ExtResource("15_xib56")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="MonitorScreen" type="Node2D"]
script = ExtResource("1_uyd8r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kw8ft")
autoplay = "default"
frame_progress = 0.834439

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_7tsib")

[node name="PointLight2D" type="PointLight2D" parent="."]
z_index = -1
position = Vector2(1, 3)
scale = Vector2(2.32, 1)
color = Color(0.615686, 0.941176, 0.913725, 1)
energy = 1.42
range_z_max = 1
shadow_enabled = true
shadow_color = Color(0.054902, 0.117647, 0.117647, 0.0235294)
shadow_filter = 2
shadow_filter_smooth = 13.6
texture = ExtResource("18_fh0uk")
offset = Vector2(0, 50)
texture_scale = 12.35

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -160.0
offset_top = -100.0
offset_right = -120.0
offset_bottom = -60.0
scale = Vector2(8, 5)
button_mask = 2

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
